[package]
name = "t-rs"
version = "0.1.8"
edition = "2021"
description = "quickly create and manage temporary folders from the commandline"
authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
license = "MIT"
readme = "README.md"

[[bin]]
name="t-rs"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.8", features=["derive", "env"]}
home = "0.5.5"
color-eyre = "0.6.2"
tempdir = "0.3.7"
symlink = "0.1.0"
fs_extra = "1.3.0"
